# antoniq_exercise_ws

./: .clang-format  .dockerignore  .gitignore  .style.yapf  17-06-2026 Robotics Software Engineer Technical Test Assessment - v2.0.docx  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/ci/: devcontainer.json
.github/workflows/: ci.yml  format-cpp.yml  format-python.yml
src/antoniq_bringup/: CMakeLists.txt  package.xml
src/antoniq_bringup/config/: antoniq_controllers.yaml  twist_mux.yaml
src/antoniq_bringup/launch/: antoniq_mission.launch.py  turtlebot_bringup.launch.py  turtlebot_viz.launch.py
src/antoniq_bringup/params/: waffle_bridge.yaml  waffle_bridge_classic.yaml
src/antoniq_bringup/rviz/: nav2_default_view.rviz
src/antoniq_bringup/worlds/: greenhouse.sdf.xacro
src/antoniq_description/: CMakeLists.txt  package.xml
src/antoniq_description/urdf/: waffle.urdf.xacro
src/antoniq_interfaces/: CMakeLists.txt  package.xml
src/antoniq_interfaces/action/: ActionPlaceholder.action
src/antoniq_interfaces/msg/: MessagePlaceholder.msg  MissionStatus.msg
src/antoniq_interfaces/srv/: Docking.srv  RotateHeading.srv  ServicePlaceholder.srv
src/antoniq_mission_status_rqt/: package.xml  plugin.xml  setup.cfg  setup.py
src/antoniq_mission_status_rqt/antoniq_mission_status_rqt/: main.py  mission_status_plugin.py  mission_status_widget.py
src/antoniq_navigation/: CMakeLists.txt  README.md  package.xml
src/antoniq_navigation/behavior_trees/: navigateToPose.xml  navigateToPoseBackStraightLine.xml  navigateToPoseStraightLine.xml
src/antoniq_navigation/config/: amcl.yaml  mapper_params_online_async.yaml  nav2_params.yaml
src/antoniq_navigation/launch/: amcl.launch.py  local_costmap.launch.py  nav2_amcl.launch.py  online_async.launch.py
src/antoniq_navigation/maps/: readme.txt
src/antoniq_nodes/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg
src/antoniq_nodes/antoniq_nodes/: workstation_tf_manager.py
src/antoniq_nodes/antoniq_nodes/helpers/: glb.py
src/antoniq_nodes/config/: demo_config.yaml
src/antoniq_nodes/include/antoniq_nodes/: mission_logic.hpp  navigate_to_pose_client.hpp  service_client.hpp
src/antoniq_nodes/launch/: antoniq_nodes.launch.py
src/antoniq_nodes/nodes/: antoniq_mission_node.cpp  docking_server_node.cpp  obstacle_monitor_node.cpp  rotate_heading_server_node.cpp
src/antoniq_nodes/test/: test_mission_logic.cpp  test_mission_node_launch.py
src/nav2_straightline_planner/: CMakeLists.txt
src/nav2_straightline_planner/include/nav2_straightline_planner/: straight_line_planner.hpp
src/nav2_straightline_planner/src/: straight_line_planner.cpp
