<?xml version="1.0"?>
<?xml-stylesheet type="text/xsl" href="http://download.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>antoniq_bringup</name>
  <version>0.1.0</version>
  <description>Bringup: launches a greenhouse-style Gazebo world and spawns TurtleBot3 in it.</description>
  <maintainer email="panagiotis.angelakis.robot@gmail.com">ros</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>antoniq_description</exec_depend>
  <exec_depend>antoniq_navigation</exec_depend>
  <exec_depend>antoniq_nodes</exec_depend>
  <exec_depend>antoniq_mission_status_rqt</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
