<?xml version="1.0"?>
<package format="3">
  <name>antoniq_interfaces</name>
  <version>0.0.1</version>
  <description>A ROS 2 package for antoniq_interfaces messages, services, and actions.</description>
  <maintainer email="panagiotis.angelakis.robot@gmail.com">Panagiotis</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
    
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
