<?xml version="1.0"?>
<?xml-stylesheet type="text/xsl" href="http://download.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>antoniq_mission_status_rqt</name>
  <version>0.1.0</version>
  <description>rqt GUI plugin that displays antoniq_interfaces/MissionStatus: row/waypoint progress and a human-readable status description, published by antoniq_mission_node on /mission_status.</description>
  <maintainer email="panagiotis.angelakis.robot@gmail.com">Panagiotis Angelakis</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_package</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>antoniq_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <build_type>ament_python</build_type>
  </export>
</package>
