<?xml version="1.0"?>
<package format="3">
    <name>antoniq_nodes</name>
    <version>2.0.0</version>
    <description>The antoniq_nodes package</description>
    <author>Antoniq</author>
    <maintainer email="panagiotis.angelakis.robot@gmail.com">Panagiotis Angelakis</maintainer>
    <author>Panagiotis Angelakis</author>
    <license>BSD-2-Clause</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <depend>builtin_interfaces</depend>
    <depend>std_msgs</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>std_srvs</depend>
    <depend>ament_index_cpp</depend>
    <depend>nav_msgs</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_eigen</depend>
    <depend>robot_localization</depend>
    <depend>visualization_msgs</depend>
    <depend>nav2_util</depend>
    <depend>nav2_msgs</depend>
    <depend>antoniq_interfaces</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>control_toolbox</depend>
    <depend>unique_identifier_msgs</depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>antoniq_navigation</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
    <buildtool_depend>ament_cmake_gen_version_h</buildtool_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>launch</test_depend>
    <test_depend>launch_ros</test_depend>
    <test_depend>launch_testing</test_depend>
    <test_depend>launch_testing_ament_cmake</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>